--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -7,22 +7,33 @@ h1 {
     text-align: center;
     font-family: Verdana;
     font-size: 20px;
+    box-sizing: border-box;
 }
 h2 {
     color: black;
     text-align: center;
     font-family: Arial;
     font-size: 14px;
+    box-sizing: border-box;
+}
+p {
+    text-align: center;
+    color: black;
+    font-family: Verdana;
+    font-size: 12px;
+    box-sizing: border-box;
 }
 p_projectDescription_left {
     text-align: left;
     color: black;
     font-family: Verdana;
     font-size: 12px;
+    display: grid;
 }
 p_projectDescription_right {
     text-align: right;
     color: black;
     font-family: Verdana;
     font-size: 12px;
+    display: grid;
 }
