added flex container
to css and added it to html file for testing

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -16,6 +16,13 @@ h2 {
     font-size: 14px;
     display: grid;
 }
+.flex-container {
+    display: flex;
+    align-items: stretch;
+}
+.flex-container > div {
+    margin: 12px;
+}
 p {
     text-align: center;
     color: black;
