--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -23,6 +23,11 @@ h2 {
 .flex-container > div {
     margin: 12px;
 }
+.flex-projects {
+    display: flex;
+    align-content: center;
+    background-color: indigo;
+}
 p {
     text-align: center;
     color: black;
