css, added added .flex-projects>div
for testing of overriden css

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -36,6 +36,13 @@ p {
     font-size: 12px;
     display: grid;
 }
+.flex-projects > div {
+    text-align: left;
+    color: black;
+    font-family: Verdana;
+    font-size: 12px;
+    display: grid;
+}
 p_projectDescription_left {
     text-align: left;
     color: black;
