--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -27,7 +27,7 @@ h2 {
     display: flex;
     flex-direction: column;
     background-color: indigo;
-    color: white;
+    color: black;
 }
 p {
     text-align: center;
