css defined .header class
added attempt at header to html file

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -50,3 +50,9 @@ p_projectDescription_right {
     justify-items: center;
     flex-direction: row-reverse;
 }
+.information-column > div {
+    margin: 20px;
+}
+.header > div {
+    margin: 50px;
+}
