--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -57,6 +57,6 @@ p_projectDescription_right {
     margin: 0px;
     display: block;
     background-repeat: no-repeat;
-    width: auto;
+    width: 500px;
     height: 500px;
 }
