--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -62,3 +62,9 @@ p_projectDescription_right {
     width: 500px;
     margin: 0px;
 }
+pict:hover {
+    opacity: 1;
+}
+pict {
+    opacity: 0.6;
+}
