--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -9,7 +9,8 @@
     text-align: center;
 }
 .column {
-    background-color: green;
+    display: flex;
+    flex-direction: column;
 }
 .column.contact-info {
     background-color: greenyellow;
