added float properties
to css columns .contact-info and project-info

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -14,12 +14,14 @@
 }
 .column.contact-info {
     background-color: greenyellow;
+    float: left;
 }
 .column.project-info {
     background-color: forestgreen;
 }
 .column.aboutme-info {
     background-color: olive;
+    float: right;
 }
 .footer {
     background-color: palevioletred;
