--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -4,6 +4,9 @@
 }
 .htop {
     background-color: skyblue;
+    margin: 0px;
+    top: 0px;
+    height: 200px;
 }
 .htop > p {
     text-align: center;
