--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: row;
     align-content: stretch;
+    height: 800px;
 }
 .column.contact-info {
     background-color: greenyellow;
