--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -4,6 +4,7 @@
     border: none;
 }
 .htop {
+    display: flex;
     background-color: skyblue;
     height: 200px;
     padding-top: 70px;
@@ -31,5 +32,4 @@
     background-color: palevioletred;
     display: flex;
     height: 100px;
-    margin: 0;
 }
