added work-space to contact info
testing size and placement

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -19,6 +19,10 @@
     background-color: greenyellow;
     float: left;
 }
+.column.contact-info.work-space {
+    padding: 20px;
+    background-color: indianred;
+}
 .column.project-info {
     background-color: forestgreen;
 }
