--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -24,7 +24,8 @@ body {
 }
 .column.contact-info.work-space {
     background-color: indianred;
-    
+    position: fixed;
+    left: 20px;
 }
 .column.project-info {
     background-color: forestgreen;
