--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -26,7 +26,7 @@ body {
     background-color: indianred;
     overflow: auto;
     position: absolute;
-    left: 20px;
+    margin: auto;
 }
 .column.project-info {
     background-color: forestgreen;
