--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -25,8 +25,9 @@ body {
 .work-space {
     background-color: indianred;
     overflow: auto;
-    position: absolute;
     margin: auto;
+    padding: 20px;
+
 }
 .column.project-info {
     background-color: forestgreen;
