--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -26,7 +26,7 @@ body {
     background-color: indianred;
     overflow: auto;
     margin: auto;
-    align-content: stretch;
+    height: 690px;
     padding: 5px;
 
 }
