--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -21,13 +21,12 @@ body {
 .column.contact-info {
     background-color: greenyellow;
     /*float: left;*/
+    align-content: center;
 }
 .work-space {
     background-color: indianred;
     height: 660px;
     padding: 20px;
-    left: 20px;
-    box-sizing: border-box;
 }
 .column.project-info {
     background-color: forestgreen;
