--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -17,12 +17,11 @@ body {
     flex-direction: row;
     align-content: stretch;
     height: 700px;
+    justify-content: center;
 }
 .column.contact-info {
     background-color: greenyellow;
-    flex: inherit;
     /*float: left;*/
-    align-content: center;
 }
 .work-space {
     background-color: indianred;
