--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -15,13 +15,12 @@ body {
 .column {
     display: flex;
     flex-direction: row;
-    align-content: stretch;
+    /*align-content: stretch;*/
     height: 700px;
     justify-content: center;
 }
 .column.contact-info {
     background-color: greenyellow;
-    /*float: left;*/
 }
 .work-space {
     background-color: indianred;
@@ -33,7 +32,6 @@ body {
 }
 .column.aboutme-info {
     background-color: olive;
-    /*float: right;*/
 }
 .footer {
     background-color: palevioletred;
