--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -26,6 +26,7 @@ body {
     background-color: indianred;
     height: 660px;
     padding: 20px;
+    padding-top: 20px;
     align-content: stretch;
 }
 .column.project-info {
