--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -10,12 +10,11 @@ body {
     display: flex;
     background-color: skyblue;
     height: 200px;
-    padding-top: 70px;
+/*    padding-top: 70px;*/
 }
 .column {
     display: flex;
     flex-direction: row;
-    /*align-content: stretch;*/
     height: 700px;
     justify-content: center;
 }
@@ -26,7 +25,6 @@ body {
     background-color: indianred;
     height: 660px;
     padding: 20px;
-    padding-top: 20px;
     align-content: stretch;
 }
 .column.project-info {
