--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     background-color: skyblue;
     height: 200px;
-    padding-top: 70px;
+    margin: 70px;
 }
 .column {
     display: flex;
