added width to work-space
90%

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -24,6 +24,7 @@ body {
 .work-space {
     background-color: indianred;
     height: 660px;
+    width: 90%;
     margin: 20px;
     align-content: stretch;
 }
