renamed illustration img, removed illustration from html

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -28,7 +28,7 @@ body {
     margin: 20px;
     align-content: stretch;
 }
-.illustration {
+img {
     display: block;
     background-color: navajowhite;
     margin: 10px;
