--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -31,7 +31,8 @@ body {
 img {
     display: block;
     background-color: navajowhite;
-    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 5px;
     max-width: 100%;
     height: auto;
