--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -31,8 +31,8 @@ body {
 img {
     display: block;
     background-color: navajowhite;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10px;
+    margin-right: 10px;
     border-radius: 5px;
     max-width: 15%;
     height: auto;
