renamed img to illustration

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -28,7 +28,7 @@ body {
     margin: 20px;
     align-content: stretch;
 }
-img {
+illustration {
     display: block;
     background-color: navajowhite;
     margin-left: auto;
