added class self-portrait as values for picture

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -35,8 +35,10 @@ illustration {
     margin-right: auto;
     border-radius: 5px;
     max-width: 25%;
-    height: auto;
-    
+    height: auto;  
+}
+.self-portrait {
+    position: absolute;
 }
 .column.project-info {
     background-color: forestgreen;
