--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -30,7 +30,7 @@ body {
 }
 illustration {
     display: block;
-    /*background-color: navajowhite;*/
+    background-color: navajowhite;
     align-content: center;
     margin: auto;
 }
