--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -41,6 +41,7 @@ illustration {
     border-radius: 5px;
     max-width: 10%;
     height: auto;  
+    justify-content: center;
 }
 .column.project-info {
     background-color: forestgreen;
