--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -36,8 +36,8 @@ illustration {
 }
 .self-portrait {
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 20px;
+    margin-right: 20px;
     border-radius: 5px;
     max-width: 10%;
     height: auto;  
