--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -32,7 +32,8 @@ illustration {
     display: block;
     background-color: navajowhite;
     align-content: center;
-    margin: auto;
+    justify-content: center;
+    /*margin: auto;*/
 }
 .self-portrait {
     position: absolute;
@@ -41,7 +42,6 @@ illustration {
     border-radius: 5px;
     max-width: 10%;
     height: auto;  
-    justify-content: center;
 }
 .column.project-info {
     background-color: forestgreen;
