test (to centre self-portrait)

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -31,10 +31,12 @@ body {
 illustration { /*describes what the picture is in*/
     background-color: navajowhite;
     display: block;
+    position: absolute;
     padding: 20px;
+    right: 40px;
+    left: 40px;
 }
 .self-portrait { /*describes the properties the picture should have*/ 
-    position: absolute;
     border-radius: 5px;
     max-width: 10%;
     height: auto;  
