--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -36,7 +36,7 @@ illustration { /*describes what the picture is in*/
 .self-portrait { /*describes the properties the picture should have*/ 
     position: absolute;
     border-radius: 5px;
-    justify-content: center;
+    vertical-align: auto;
     max-width: 10%;
     height: auto;  
     right: 40px;
