--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -36,11 +36,10 @@ illustration { /*describes what the picture is in*/
 .self-portrait { /*describes the properties the picture should have*/ 
     position: absolute;
     border-radius: 5px;
-    vertical-align: auto;
     max-width: 10%;
-    height: auto;  /*
-    right: 40px;
-    left: 40px;*/
+    height: auto;  
+    right: 100px;
+    left: 100px;
 }
 .column.project-info {
     background-color: forestgreen;
