--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -15,7 +15,8 @@ body {
 .banner { /*describes the properties the picture should have*/
     position: absolute;
     border-radius: 4px;
-    max-width: 15%;
+    max-width: 50%;
+    object-fit: contain;
     height: auto;
     padding: 0px;
 }
@@ -44,6 +45,7 @@ body {
     margin-right: auto;
     margin-left: auto;
     border-radius: 5px;
+    object-fit: contain;
     max-width: 10%;
     height: auto;  
 }
