--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -15,7 +15,7 @@ body {
 .banner { /*describes the properties the picture should have*/
     position: absolute;
     border-radius: 4px;
-    max-width: 50%;
+    max-width: 1920px;
     object-fit: contain;
     height: auto;
     padding: 0px;
