--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -13,7 +13,7 @@ body {
     padding: 70px;
 }
 .banner { /*describes the properties the picture should have*/
-    /*position: absolute;*/
+    position: absolute;
     border-radius: 4px;
     /*max-width: 1920px;*/
     object-fit: scale-down;
