--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -15,9 +15,8 @@ body {
 .banner { /*describes the properties the picture should have*/
     position: absolute;
     border-radius: 4px;
-    /*max-width: 1920px;*/
-    object-fit: scale-down;
-    height: 50px;
+    object-fit: contain;
+    height: auto;
     padding: 0px;
 }
 .column {
