update banner max content

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -16,7 +16,7 @@ body {
     position: center;
     border-radius: 4px;
     object-fit: contain;
-    max-width: fit-content;
+    max-width: max-content;
     height: auto;
     padding: 0px;
 }
