--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -16,8 +16,8 @@ body {
     position: center;
     border-radius: 4px;
     object-fit: contain;
-    max-width: max-content;
-    height: auto;
+    max-width: 1740px;
+    height: 50px;
     padding: 0px;
 }
 .column {
