--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -15,7 +15,7 @@ body {
 .banner { /*describes the properties the picture should have*/
     position: center;
     border-radius: 4px;
-    object-fit: contain;
+    justify-self: center;
     max-width: 1740px;
     height: 200px;
     padding: 0px;
@@ -40,14 +40,15 @@ body {
     background-color: navajowhite;
     padding: 20px;
 }
-.self-portrait { /*describes the properties the picture should have*/ 
+.self-portrait { /*describes the properties the picture should have*/
     position: absolute;
+    justify-self: center;
     margin-right: auto;
     margin-left: auto;
     border-radius: 5px;
     object-fit: contain;
     max-width: 10%;
-    height: auto;  
+    height: auto;
 }
 .column.project-info {
     background-color: forestgreen;
