--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -30,15 +30,15 @@ body {
     background-color: greenyellow;
 }
 .work-space {
+    display: flex;
     background-color: indianred;
     height: 660px;
     width: 90%;
     margin: 20px;
+    justify-content: center;
     align-content: stretch;
 }
 .self-portrait { /*describes the properties the picture should have*/
-    margin-right: auto;
-    margin-left: auto;
     border-radius: 5px;
     object-fit: contain;
     max-width: 10%;
