--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -33,6 +33,8 @@ body {
     background-color: lightgray;
     display: flex;
     flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 1;
     height: auto;
     width: 20%;
     margin: 10px;
