--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -40,7 +40,7 @@ body {
     width: 100%;
     margin: 10px;
     justify-content: center;
-    align-content: flex-start;
+    align-content: center;
 }
 .self-portrait { /*describes the properties the picture should have*/
     border-radius: 5px;
