--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -45,7 +45,7 @@ body {
 .self-portrait { /*describes the properties the picture should have*/
     border-radius: 5px;
     object-fit: contain;
-    /*max-width: 90%;*/
+    max-width: 100%;
     height: auto;
 }
 .column.project-info {
