--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -39,8 +39,8 @@ body {
     height: auto;
     width: 100%;
     margin: 10px;
-    justify-content: center;
-    /*align-items: center;*/
+    /*justify-content: center;*/
+    align-items: center;
 }
 .self-portrait { /*describes the properties the picture should have*/
     border-radius: 5px;
