update, html contact-info
marked up and seprated column for adding information

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -8,7 +8,7 @@ body {
 }
 .htop {
     display: flex;
-    background-color: darkgray;
+    background-color: lightgray;
     height: 200px;
     padding: 70px;
 }
