added text-boxes class
for adding information and controling how their children appear in the content-space

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -61,6 +61,13 @@ body {
     flex-shrink: 1;
     flex-basis: 50%;
 }
+.text-boxes {
+    background-color: whitesmoke;
+    display: flex;
+    width: 90%;
+    margin: 10px 5px;
+    align-items: flex-start;
+}
 .footer {
     background-color: lightgray;
     display: flex;
