--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -64,10 +64,10 @@ body {
 .text-boxes {
     background-color: whitesmoke;
     display: flex;
-    flex-direction: row;
+ /*   flex-direction: row;*/
     width: 90%;
     margin: 10px 5px;
-    align-items: flex-start;
+    align-content: flex-start;
 }
 .footer {
     background-color: lightgray;
