--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -63,8 +63,8 @@ body {
 }
 .text-boxes {
     background-color: whitesmoke;
-    display: flex;
- /*   flex-direction: row;*/
+    /*    display: flex;
+   flex-direction: row;*/
     width: 90%;
     margin: 10px 5px;
     align-content: center;
