--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -66,6 +66,7 @@ body {
     width: 90%;
     margin: 10px 5px;
     align-content: center;
+    justify-content: center;
 }
 .footer {
     background-color: lightgray;
