--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -73,3 +73,8 @@ body {
     display: flex;
     height: 100px;
 }
+@media (max-width: 480px) {
+    .column {
+        flex-direction: column;
+    }
+}
