--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
 }
 body {
+    display: flex;
     background-color: white;
     margin: 0px;
     border: none;
@@ -72,6 +73,11 @@ body {
     background-color: lightgray;
     display: flex;
     height: 100px;
+}
+@media (max-width: 900px) {
+    .body {
+        flex-direction: column;
+    }
 }
 @media (max-width: 900px) {
     .column {
