--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body {
-    display: flex;
+   /* display: flex;*/
     background-color: white;
     margin: 0px;
     border: none;
