--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -45,7 +45,7 @@ body {
     height: auto;
 }
 .column.project-info {
-    background-color: lightgrey;
+    background-color: hotpink;
     flex-grow: 0;
     flex-shrink: 1;
     flex-basis: 33%;
