test column class
commented out height requirement (700px)

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -59,7 +59,7 @@ body {
 .column {
     display: flex;
     flex-direction: row;
-    height: 700px;
+    /*height: 700px;*/
     justify-content: center;
 }
 .column.aboutme-info {
